added a bit of styling using sass

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
   "include": [
     "src/**/*.ts",
     "tests/**/*.ts"
-  ],
+, "frontend/src/fetchPosts.ts"  ],
   "exclude": [
     "node_modules",
     ".vscode",
